Add Atom editor and its nrepl plugin

--- a/content/community/resources.adoc
+++ b/content/community/resources.adoc
@@ -75,6 +75,7 @@ Community volunteers maintain http://dev.clojure.org/display/doc/getting+started
 * https://sekao.net/nightcode/[Nightcode]
 * http://www.lighttable.com/[Light Table]
 * http://www.sublimetext.com/[Sublime Text] with https://github.com/wuub/SublimeREPL[SublimeREPL]
+* https://atom.io[Atom] with https://atom.io/packages/nrepl[nrepl]
 
 == Conferences
 
