Tweaks for the reader conditional guide

--- a/content/guides/guides.adoc
+++ b/content/guides/guides.adoc
@@ -7,4 +7,6 @@ Alex Miller
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
 * <<getting_started#,Getting Started>>
+* <<comparators#,Comparators>>
+* <<reader_conditionals#,Reader Conditionals>>
 
