added Clojure Toolbox, fixes #49

--- a/content/community/resources.adoc
+++ b/content/community/resources.adoc
@@ -45,6 +45,7 @@ Community:
 * https://github.com/bbatsov/clojure-style-guide[Clojure Style Guide]
 * http://planet.clojure.in/[Planet Clojure] - Clojure blog aggregator
 * Newsletters - http://defnewsletter.com/[(def newsletter)] http://www.clojuregazette.com/[Clojure Gazette] http://reborg.tumblr.com/[Clojure Weekly]
+* http://www.clojure-toolbox.com/[Clojure Toolbox] - a categorized index of Clojure libraries
 * http://www.clojureatlas.com/[Clojure Atlas] - visualization of Clojure and the core library
 
 Videos and presentations:
