--- a/content/api/api.adoc
+++ b/content/api/api.adoc
@@ -20,46 +20,46 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 == Clojure Contrib Libraries
 
 * http://clojure.github.io/algo.generic/[algo.generic] Generic versions of common functions
-* http://clojure.github.io/algo.graph/[algo.graph] Basic graph theory algorithms
-* http://clojure.github.io/algo.monads/[algo.monads] Monad Macros and Definitions 
-* http://clojure.github.io/core.async/[core.async] Facilities for async programming and communication
+* http://clojure.github.io/algo.graph/[algo.graph] Graph theory algorithms
+* http://clojure.github.io/algo.monads/[algo.monads] Monad macros and Definitions 
+* http://clojure.github.io/core.async/[core.async] Facilities for asynchronous programming and communication
 * http://clojure.github.io/core.cache/[core.cache] A caching library implementing various cache strategies
 * http://clojure.github.io/core.contracts/[core.contracts] Contracts programming in Clojure
 * http://clojure.github.io/core.incubator/[core.incubator] Functions proposed for core inclusion
 * http://clojure.github.io/core.logic/[core.logic] A logic programming library based on miniKanren
 * http://clojure.github.io/core.match/[core.match] Pattern match and predicate dispatch
 * http://clojure.github.io/core.memoize/[core.memoize] A manipulable, pluggable, memoization framework
-* http://clojure.github.io/core.rrb-vector/[core.rrb-vector] RRB-Tree-based Vectors
-* http://clojure.github.io/core.typed/[core.typed] Gradual Typing
+* http://clojure.github.io/core.rrb-vector/[core.rrb-vector] RRB-Tree-based vectors
+* http://clojure.github.io/core.typed/[core.typed] Gradual typing
 * http://clojure.github.io/core.unify/[core.unify] Unification library
 * http://clojure.github.io/data.avl/[data.avl] AVL trees
 * http://clojure.github.io/data.codec/[data.codec] Native codec implementations
 * http://clojure.github.io/data.csv/[data.csv] Reading and writing CSV files
 * http://clojure.github.io/data.finger-tree/[data.finger-tree] Finger trees
-* http://clojure.github.io/data.fressian/[data.fressian] Extensible Binary Data Notation
-* http://clojure.github.io/data.generators/[data.generators] Random Data Generators
-* http://clojure.github.io/data.json/[data.json] JSON Utilities
+* http://clojure.github.io/data.fressian/[data.fressian] Extensible binary Data Notation
+* http://clojure.github.io/data.generators/[data.generators] Random data generators
+* http://clojure.github.io/data.json/[data.json] JSON encoding / decoding
 * http://clojure.github.io/data.priority-map/[data.priority-map] Priority maps
 * http://clojure.github.io/data.xml/[data.xml] Lazy XML parsing
 * http://clojure.github.io/data.zip/[data.zip] Manipulating zippers
-* http://clojure.github.io/java.classpath/[java.classpath] Classpath Utilities
-* http://clojure.github.io/java.data/[java.data]  Work with Java Beans
-* http://clojure.github.io/java.jdbc/[java.jdbc] JDBC-based SQL Interface 
-* http://clojure.github.io/java.jmx/[java.jmx] JMX Interface
+* http://clojure.github.io/java.classpath/[java.classpath] Classpath utilities
+* http://clojure.github.io/java.data/[java.data] Work with Java Beans
+* http://clojure.github.io/java.jdbc/[java.jdbc] JDBC-based SQL interface 
+* http://clojure.github.io/java.jmx/[java.jmx] JMX interface
 * http://clojure.github.io/math.combinatorics/[math.combinatorics] Lazy sequences for common combinatorial functions
-* http://clojure.github.io/math.numeric-tower/[math.numeric-tower] Math functions 
+* http://clojure.github.io/math.numeric-tower/[math.numeric-tower] Math functions and numeric tower
 * http://clojure.github.io/test.generative/[test.generative] Test data generation and execution harness
-* http://clojure.github.io/tools.analyzer/[tools.analyzer] Analyzer for Clojure code 
-* http://clojure.github.io/tools.analyzer.js/[tools.analyzer.js] Javascript-specific passes for tools.analyzer 
+* http://clojure.github.io/tools.analyzer/[tools.analyzer] Analyzer framework for Clojure code 
+* http://clojure.github.io/tools.analyzer.js/[tools.analyzer.js] JavaScript-specific passes for tools.analyzer 
 * http://clojure.github.io/tools.analyzer.jvm/[tools.analyzer.jvm] JVM-specific passes for tools.analyzer
-* http://clojure.github.io/tools.cli/[tools.cli] Command-line processor
+* http://clojure.github.io/tools.cli/[tools.cli] Command-line argument processor
 * http://clojure.github.io/tools.emitter.jvm/[tools.emitter.jvm] JVM bytecode generator
-* http://clojure.github.io/tools.logging/[tools.logging] Logging Tools 
-* http://clojure.github.io/tools.macro/[tools.macro] Tools for Macro Writers
-* http://clojure.github.io/tools.namespace/[tools.namespace] Extract namespace declarations
+* http://clojure.github.io/tools.logging/[tools.logging] Logging tools 
+* http://clojure.github.io/tools.macro/[tools.macro] Tools for macro writers
+* http://clojure.github.io/tools.namespace/[tools.namespace] Tools for working with namespace declarations
 * http://clojure.github.io/tools.nrepl/[tools.nrepl] Network REPL
-* http://clojure.github.io/tools.reader/[tools.reader]  Clojure Reader
-* http://clojure.github.io/tools.trace/[tools.trace] Execution tracing tool
+* http://clojure.github.io/tools.reader/[tools.reader] Clojure reader
+* http://clojure.github.io/tools.trace/[tools.trace] Execution tracing
 
 == Other resources
 
