update companies list

--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -184,6 +184,7 @@ Below is a partial list of some companies using Clojure or ClojureScript. Most o
 * http://www.tappcommerce.com/[Tapp Commerce]
 * http://www.technoidentity.com/[TechnoIdentity]
 * http://www.teradata.com[Teradata] - http://www.teradata.com/Teradata-Loom[Loom]
+* http://testdouble.com/[Test Double]
 * http://www.thinktopic.com/[ThinkTopic]
 * http://www.thoughtworks.com/[ThoughtWorks] - http://www.thoughtworks.com/clients/ioof[IOOF] (and others)
 * http://www.threatgrid.com/[ThreatGRID] (acquired by http://www.cisco.com/[Cisco])
