update patch contributors list for 1.8

--- a/content/community/contributing.adoc
+++ b/content/community/contributing.adoc
@@ -36,6 +36,7 @@ See the full <<contributors#,list of contributors>> that have signed the Clojure
 * Achim Passen
 * Alan Dipert
 * Alan Malloy
+* Alexander Yakushev
 * Alex Miller
 * Alex Osborne
 * Alex Ott
