--- a/content/community/downloads.adoc
+++ b/content/community/downloads.adoc
@@ -7,20 +7,21 @@ Rich Hickey
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
-== Stable Release: 1.7.0 (June 30, 2015)
+== Stable Release: 1.8.0 (January 19, 2016)
 
-
-* http://repo1.maven.org/maven2/org/clojure/clojure/1.7.0/clojure-1.7.0.zip[Clojure 1.7.0]
+* http://repo1.maven.org/maven2/org/clojure/clojure/1.8.0/clojure-1.8.0.zip[Clojure 1.8.0]
 * https://github.com/clojure/clojure/blob/master/changes.md[Changelog]
 
-== Development Release: 1.8.0-RC5 
+////
+== Development Release: 1.9.0-alpha1
 
-* http://repo1.maven.org/maven2/org/clojure/clojure/1.8.0-RC5/clojure-1.8.0-RC5.zip[Clojure 1.8.0-RC5]
-* http://search.maven.org/#search%7Cga%7C1%7Cg%3A%22org.clojure%22%20AND%20a%3A%22clojure%22%20AND%20v%3A1.8.0*[Clojure 1.8 pre-release builds]
+* http://repo1.maven.org/maven2/org/clojure/clojure/1.9.0-alpha1/clojure-1.9.0-alpha1.zip[Clojure 1.9.0-alpha1]
+* http://search.maven.org/#search%7Cga%7C1%7Cg%3A%22org.clojure%22%20AND%20a%3A%22clojure%22%20AND%20v%3A1.9.0*[Clojure 1.9 pre-release builds]
+////
 
 == Clojure Source
 
-Clojure source code is hosted at http://github.com/clojure/clojure[github.com/clojure/clojure]. Builds of the very latest version of Clojure's master branch are available at https://oss.sonatype.org/content/repositories/snapshots/org/clojure/clojure/1.8.0-master-SNAPSHOT/[build.clojure.org].
+Clojure source code is hosted at http://github.com/clojure/clojure[github.com/clojure/clojure]. Builds of the very latest version of Clojure's master branch are available at https://oss.sonatype.org/content/repositories/snapshots/org/clojure/clojure/1.9.0-master-SNAPSHOT/[build.clojure.org].
 
 == Get Clojure via Leiningen
 
@@ -28,7 +29,7 @@ Modify the dependencies and repositories sections of your http://leiningen.org/[
 [source,clojure]
 ----
 ; under dependencies, select the release of clojure that you want
-:dependencies [[org.clojure/clojure "1.7.0"]]
+:dependencies [[org.clojure/clojure "1.8.0"]]
 
 ----
 == Where did Clojure Contrib go?
