update contributor name

--- a/content/news/2016/01/19/clojure18.adoc
+++ b/content/news/2016/01/19/clojure18.adoc
@@ -50,7 +50,7 @@ Thanks to all of those who contributed to Clojure 1.8 (first time contributors i
 * *Ralf Schmitt*
 * Rich Hickey
 * *Russ Olsen*
-* *Shogo Ohto*
+* *Shogo Ohta*
 * Steve Miner
 * Stuart Halloway
 * Timothy Baldridge
