update companies list

--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -29,6 +29,7 @@ Below is a partial list of some companies using Clojure or ClojureScript. Most o
 * http://bevuta.com/[bevuta]
 * https://www.braintreepayments.com/[Braintree Payments] (acquired by PayPal)
 * http://brickalloy.com/[BrickAlloy]
+* https://www.brightin.nl/[Brightin]
 * http://www.brightnorth.co.uk/[Bright North]
 * http://broadpeakpartners.com[BroadPeak]
 * http://bugsbio.org/[BUGS Bioscience]
@@ -79,6 +80,7 @@ Below is a partial list of some companies using Clojure or ClojureScript. Most o
 * http://www.flowa.fi/[Flowa]
 * http://try.framed.io/[Framed Data]
 * https://www.fullcontact.com/[FullContact]
+* http://functionalworks.com/[Functional Works]
 * http://fundingcircle.com[Funding Circle]
 * http://www.getcontented.com.au/[GetContented]
 * http://about.getset.com/[GetSet]
