update video links, closes #73

--- a/content/community/resources.adoc
+++ b/content/community/resources.adoc
@@ -60,8 +60,14 @@ Video training (commercial):
 * http://www.purelyfunctional.tv/intro-to-clojure[Introduction to Clojure] - Eric Normand (LispCast)
 * http://www.purelyfunctional.tv/web-dev-in-clojure[Web Development in Clojure] - Eric Normand (LispCast)
 * http://shop.oreilly.com/product/0636920030409.do[Clojure Inside Out] - Stuart Halloway, Neal Ford (O'Reilly)
-* http://pluralsight.com/training/courses/TableOfContents?courseName=clojure-fundamentals-part-one[Clojure Fundamentals] - Alan Dipert (PluralSight)
-* http://pluralsight.com/training/courses/TableOfContents?courseName=clojure-concurrency-tutorial&highlight=craig-andera_clojure-concurrency-tutorial-intro*3,8!craig-andera_clojure-concurrency-tutorial-vars!craig-andera_clojure-concurrency-tutorial-atoms!craig-andera_clojure-concurrency-tutorial-agents!craig-andera_clojure-concurrency-tutorial-refs!craig-andera_clojure-concurrency-tutorial-misc#clojure-concurrency-tutorial-intro[Clojure Concurrency] - Craig Andera (PluralSight)
+* http://shop.oreilly.com/product/0636920041474.do[Communicating Sequential Processes with core.async] - Timothy Baldridge (O'Reilly)
+* http://www.infiniteskills.com/training/building-microservices-with-clojure.html[Building Microservices with Clojure] - Scott Rehorn (O'Reilly)
+* http://www.infiniteskills.com/training/learning-clojure.html[Learning Clojure] - Adam Bard
+* http://www.infiniteskills.com/training/learning-clojurescript.html[Learning ClojureScript] - David Eisenberg
+* http://www.lynda.com/Clojure-tutorials/Up-Running-Clojure/413127-2.html[Up and Running with Clojure] - Arthur Ulfeldt
+* https://www.pluralsight.com/courses/clojure-fundamentals-part-one[Clojure Fundamentals] - Alan Dipert (PluralSight)
+* https://www.pluralsight.com/courses/clojure-concurrency-tutorial[Clojure Concurrency] - Craig Andera (PluralSight)
+* https://www.packtpub.com/web-development/building-web-applications-clojure-video[Building Web Applications with Clojure] - Tomek Lipski (Packt)
 
 == Clojure Tools
 
