sync up guides index

--- a/content/guides/guides.adoc
+++ b/content/guides/guides.adoc
@@ -6,7 +6,17 @@ Alex Miller
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
+=== Learning
+
 * <<getting_started#,Getting Started>>
+
+=== Language
+
+* <<threading_macros#,Threading Macros>>
 * <<comparators#,Comparators>>
 * <<reader_conditionals#,Reader Conditionals>>
+
+=== Tools
+
+=== Libraries
 
