update threading macro page type

--- a/content/guides/threading_macros.adoc
+++ b/content/guides/threading_macros.adoc
@@ -1,7 +1,7 @@
 = Threading Macros Guide
 Paulus Esterhazy
 2016-01-05
-:jbake-type: page
+:jbake-type: guides
 :toc: macro
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
