--- a/content/guides/faq.adoc
+++ b/content/guides/faq.adoc
@@ -27,6 +27,11 @@ However, unlike Lisp, Clojure does not allow the user to extend this set of read
 
 == Collections, Sequences, and Transducers
 
+[[conj]]
+**Why does `conj` add to the front of a list and the back of a vector?**
+
+Most Clojure data structure operations, including `conj` (conjoin), are designed to give the user a performance expectation. With `conj`, the expectation is that insertion should happen at the place where this operation is efficient. Lists (as linked lists) can make a constant time insertion only at the front. Vectors (indexed) are designed to expand at the back. As the user, you should consider this when you choose which data structure to use. In Clojure, vectors are used with much greater frequency.
+
 [[seqs_vs_colls]]
 **I keep forgetting that after calling sequence functions on vectors/sets, the return value no longer is no longer has vector or set semantics.**
 
